homework javascript-week-2

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
           <input type="text" placeholder="Search..." />
           <button><i class="fa fa-search"></i></button>
         </div>
+        <!-- -----Sorting price------ -->
+        <div class="products--sorting">
+          <label for="sort">Price</label>
+          <select id="sort" class="sort--dropdown">
+            <option value="asc">Low to High</option>
+            <option value="desc">High to Low</option>
+          </select>
+        </div>
+        <!-- ------- -->
         <!-- nav  -->
         <div class="icons">
           <a href="index.html"> <i class="fa fa-user"></i></a>
