homework for 3rd

--- a/index.html
+++ b/index.html
@@ -62,22 +62,20 @@
     </header>
 
     <!-- Main Section -->
-   
+
     <main>
-       <!-- Product Cards -->
+      <!-- Product Cards -->
       <section class="product-list" id="product-list"></section>
     </main>
 
     <!-- Modal -->
-    <!-- <div id="productModal" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <h1>Product Details</h1>
-        <img src="" alt="Product Image" id="modalProductImage" />
-        <p id="modalProductDescription"></p>
-        <p id="modalProductPrice"></p>
-      </div>
-    </div>  -->
+    
+   <!-- Cart Modal or Section -->
+   <div class="cart-section">
+    <h2>Your Cart</h2>
+    <ul id="cart-items"></ul>
+    <p id="cart-message" class="confirmation-message"></p>
+  </div>
 
     <!-- Footer Section -->
     <footer>
